Linked objects jumping around during render #72820

Closed
opened 2019-12-31 13:35:44 +01:00 by stephen thomas · 6 comments

System Information
Operating system: Ubuntu 19.10 and macOS Catalina
Graphics card: RTX 2080 ti

Blender Version
Broken: 2.81 onwards
Worked: 2.80

Short description of error
Armatured collections linked into an animation file are jumping around at render time (see the attached video).

Exact steps for others to reproduce the error

  • Open 'linking-bug-animation.blend'
  • Render animation

The bug is random, sometimes the linked objects will jump on a frame, sometimes they won't. We've been working around this bug by re-rendering frames. The bug occurs with both Cycles and Eevee.

The blend files are stripped down versions of project files currently being worked on. I've left the assets that were having issues in the project, replacing the models with simple meshes. Assets that weren't jumping around at render time have been removed. All linking is relative and using the proxy armature workflow, not the new override method.

The only difference I can see between the jumping and the non-jumping assets is the number of collections being linked in from a single blend file. The 'molecules.blend and 'plane.blend' contain several different collections being linked in and were the only things jumping around at render time. Saying that though, I've removed all but one of the plane collection links in 'linking-bug-animation.blend' and the plane still jumps.

linking-bug-ani.mov
blender-jumping-bug.zip

**System Information** Operating system: Ubuntu 19.10 and macOS Catalina Graphics card: RTX 2080 ti **Blender Version** Broken: 2.81 onwards Worked: 2.80 **Short description of error** Armatured collections linked into an animation file are jumping around at render time (see the attached video). **Exact steps for others to reproduce the error** - Open 'linking-bug-animation.blend' - Render animation The bug is random, sometimes the linked objects will jump on a frame, sometimes they won't. We've been working around this bug by re-rendering frames. The bug occurs with both Cycles and Eevee. The blend files are stripped down versions of project files currently being worked on. I've left the assets that were having issues in the project, replacing the models with simple meshes. Assets that weren't jumping around at render time have been removed. All linking is relative and using the proxy armature workflow, not the new override method. The only difference I can see between the jumping and the non-jumping assets is the number of collections being linked in from a single blend file. The 'molecules.blend and 'plane.blend' contain several different collections being linked in and were the only things jumping around at render time. Saying that though, I've removed all but one of the plane collection links in 'linking-bug-animation.blend' and the plane still jumps. [linking-bug-ani.mov](https://archive.blender.org/developer/F8253392/linking-bug-ani.mov) [blender-jumping-bug.zip](https://archive.blender.org/developer/F8253393/blender-jumping-bug.zip)
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas

Added subscriber: @ronsn

Added subscriber: @ronsn

I can confirm this issue on Linux (Ubuntu 18.04) too and it behaves different depending on if you render at 50% resolution, or as image sequence, ...
This issue was caused by this Git commit: 6183688c3560100dc1dcce3354cb622a135bc275 (6183688c35)

–––––––––––––––––––––––––––––––
System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-18 14:06, hash: 6183688c35
Worked: version: 2.81 (sub 15), branch: master, commit date: 2019-10-18 11:29, hash: 725b59d9b4

I can confirm this issue on Linux (Ubuntu 18.04) too and it behaves different depending on if you render at 50% resolution, or as image sequence, ... This issue was caused by this Git commit: `6183688c3560100dc1dcce3354cb622a135bc275` (6183688c35) ––––––––––––––––––––––––––––––– **System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** **Broken**: version: 2.81 (sub 15), branch: master, commit date: 2019-10-18 14:06, hash: `6183688c35` **Worked**: version: 2.81 (sub 15), branch: master, commit date: 2019-10-18 11:29, hash: `725b59d9b4`

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 2e06a6bec3

This issue was referenced by 2e06a6bec3f5ed078a544dea9c4f842e403abbc0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2020-01-02 16:48:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72820
No description provided.