Fix T72820: Linked objects jumping around during render

Was caused by 6183688c3560 (thanks ronsn for nailing it down!).

The issue is that order of copy-on-write operations is not defined, so
can not use flags set by that operation to make decision.