source/blender/depsgraph/intern/builder/deg_builder.h
@@ -24,6 +24,7 @@
 #pragma once
 
 struct Base;
+struct ID;
 struct Main;
 struct Object;
 struct bPoseChannel;
@@ -53,6 +54,7 @@ class DepsgraphBuilder {
   DepsgraphBuilderCache *cache_;
 };
 
+bool deg_check_id_in_depsgraph(const Depsgraph *graph, ID *id_orig);
 bool deg_check_base_in_depsgraph(const Depsgraph *graph, Base *base);
 void deg_graph_build_finalize(Main *bmain, Depsgraph *graph);
 
